Add projects, links, and styling

--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html>
   <head>
     <title>Sean Tai Han Xuan</title>
+    <style>
+      body { font-family: Arial; max-width: 700px; margin: auto; padding: 20px; }
+      h1, h2 { color: #2a2a2a; }
+      a { color: #3366cc; }
+    </style>
   </head>
   <body>
     <h1>Welcome to my personal website!</h1>
     <p>I'm a CS student interested in Arduino, physics, and app development.</p>
+
+    <h2>Projects</h2>
+    <ul>
+      <li>Summer Arduino Research (in progress)</li>
+      <li>Sentiment Analysis App</li>
+      <li>Journal Reflection System</li>
+    </ul>
+
+    <h2>Links</h2>
+    <p>
+      <a href="https://github.com/seantaihx" target="_blank">GitHub</a> |
+      <a href="https://linkedin.com/in/YOURPROFILE" target="_blank">LinkedIn</a>
+    </p>
   </body>
 </html>
