Add structured navigation with project and reflection sections

--- a/index.html
+++ b/index.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sean Tai Han Xuan</title>
+    <title>My Portfolio</title>
     <style>
-      body { font-family: Arial; max-width: 700px; margin: auto; padding: 20px; }
-      h1, h2 { color: #2a2a2a; }
-      a { color: #3366cc; }
+      body { font-family: Arial, sans-serif; margin: 20px; }
+      nav ul { list-style: none; padding: 0; }
+      nav ul li { display: inline; margin-right: 15px; }
     </style>
   </head>
   <body>
-    <h1>Welcome to my personal website!</h1>
-    <p>I'm a CS student interested in Arduino, physics, and app development.</p>
 
-    <h2>Projects</h2>
-    <ul>
-      <li>Summer Arduino Research (in progress)</li>
-      <li>Sentiment Analysis App</li>
-      <li>Journal Reflection System</li>
-    </ul>
+    <!-- Navigation Menu -->
+    <nav>
+      <ul>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#reflections">General Reflections</a></li>
+      </ul>
+    </nav>
 
-    <h2>Links</h2>
-    <p>
-      <a href="https://github.com/seantaihx" target="_blank">GitHub</a> |
-      <a href="https://linkedin.com/in/YOURPROFILE" target="_blank">LinkedIn</a>
-    </p>
+    <!-- Projects Section -->
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li><a href="#arduino">Arduino Project</a></li>
+        <li><a href="#app">App Development</a></li>
+      </ul>
+    </section>
+
+    <!-- Arduino Project Subsection -->
+    <section id="arduino">
+      <h3>Arduino Project</h3>
+      <p>Details about your Arduino project...</p>
+      <h4>Reflection</h4>
+      <p>Your reflection about the Arduino project goes here.</p>
+    </section>
+
+    <!-- App Project Subsection -->
+    <section id="app">
+      <h3>App Development</h3>
+      <p>Details about your app development project...</p>
+      <h4>Reflection</h4>
+      <p>Your reflection about the app development project goes here.</p>
+    </section>
+
+    <!-- General Reflections Section -->
+    <section id="reflections">
+      <h2>General Reflections</h2>
+      <p>Other reflections or insights can be placed here.</p>
+    </section>
+
   </body>
 </html>
