Make somechange in style

--- a/index.html
+++ b/index.html
@@ -3,9 +3,77 @@
   <head>
     <title>My Portfolio</title>
     <style>
-      body { font-family: Arial, sans-serif; margin: 20px; }
-      nav ul { list-style: none; padding: 0; }
-      nav ul li { display: inline; margin-right: 15px; }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        background-color: #f9f9f9;
+        color: #333;
+        line-height: 1.6;
+      }
+      nav ul {
+        list-style: none;
+        padding: 0;
+        margin-bottom: 20px;
+      }
+      nav ul li {
+        display: inline;
+        margin-right: 15px;
+      }
+      nav a {
+        text-decoration: none;
+        color: #0066cc;
+      }
+      nav a:hover {
+        text-decoration: underline;
+      }
+      section {
+        margin-bottom: 40px;
+        padding: 20px;
+        background: #ffffff;
+        border-radius: 6px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      }
+      h1, h2, h3, h4 {
+        color: #004080;
+        margin-top: 1.2em;
+      }
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 10px;
+      }
+      table, th, td {
+        border: 1px solid #ccc;
+      }
+      th, td {
+        padding: 8px;
+        text-align: left;
+      }
+      details {
+        margin-bottom: 1em;
+      }
+      summary {
+        font-weight: bold;
+        cursor: pointer;
+        margin-bottom: 0.5em;
+      }
+      code {
+        background: #eee;
+        padding: 2px 4px;
+        border-radius: 4px;
+        display: block;
+        margin: 10px 0;
+        white-space: pre-wrap;
+      }
+      pre {
+        background: #f4f4f4;
+        padding: 10px;
+        border-radius: 4px;
+        overflow-x: auto;
+      }
+      a {
+        color: #0066cc;
+      }
     </style>
   </head>
   <body>
