--- a/index.html
+++ b/index.html
@@ -1,107 +1,112 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Portfolio</title>
-    <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    background-color: #f9f9f9;
-    color: #333;
-    line-height: 1.6;
-  }
-  nav ul {
-    list-style: none;
-    padding: 0;
-    margin-bottom: 20px;
-  }
-  nav ul li {
-    display: inline;
-    margin-right: 15px;
-  }
-  nav a {
-    text-decoration: none;
-    color: #0066cc;
-  }
-  nav a:hover {
-    text-decoration: underline;
-  }
-  section {
-    margin-bottom: 40px;
-    padding: 20px;
-    background: #ffffff;
-    border-radius: 6px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-  }
-  h1, h2, h3, h4 {
-    color: #004080;
-    margin-top: 1.2em;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
-  }
-  table, th, td {
-    border: 1px solid #ccc;
-  }
-  th, td {
-    padding: 8px;
-    text-align: left;
-  }
-  details {
-    margin-bottom: 1em;
-  }
-  summary {
-    font-weight: bold;
-    cursor: pointer;
-    margin-bottom: 0.5em;
-  }
-  code {
-    background: #eee;
-    padding: 2px 4px;
-    border-radius: 4px;
-    display: block;
-    margin: 10px 0;
-    white-space: pre-wrap;
-  }
-  pre {
-    background: #f4f4f4;
-    padding: 10px;
-    border-radius: 4px;
-    overflow-x: auto;
-  }
-  a {
-    color: #0066cc;
-  }
-</style>
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>My Portfolio - Sean Tai Han Xuan</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #121212;
+      color: #e0e0e0;
+      margin: 0;
+      padding: 20px;
+      line-height: 1.6;
+      scroll-behavior: smooth;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 0 30px 0;
+      display: flex;
+      gap: 20px;
+    }
+    nav ul li {
+      display: inline;
+    }
+    nav a {
+      text-decoration: none;
+      color: #90caf9;
+      padding: 6px 10px;
+      border-radius: 4px;
+      transition: background 0.3s;
+    }
+    nav a:hover {
+      background-color: #1e1e1e;
+    }
+    section {
+      background-color: #1e1e1e;
+      padding: 20px;
+      margin-bottom: 40px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+    h1, h2, h3, h4 {
+      color: #bbdefb;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    table, th, td {
+      border: 1px solid #444;
+    }
+    th, td {
+      padding: 10px;
+      text-align: left;
+    }
+    summary {
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    pre {
+      background-color: #263238;
+      padding: 10px;
+      border-radius: 6px;
+      overflow-x: auto;
+      color: #e0e0e0;
+    }
+    code {
+      font-family: monospace;
+      white-space: pre-wrap;
+    }
+    a {
+      color: #81d4fa;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
 
-    <!-- Navigation Menu -->
-    <nav>
-      <ul>
-        <li><a href="#introduction">Introductions</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#reflections">General Reflections</a></li>
-      </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#reflections">Reflections</a></li>
+    </ul>
+  </nav>
 
-    <section id="introduction">
-      <h1>Welcome to My Portfolio</h1>
-      <p>Hi, I'm <strong>Sean Tai Han Xuan</strong>, a computer science student passionate about hands-on projects, applying theoretical knowledge to real life, and building smart systems that bridge the digital and physical worlds.</p>
-    
-      <p>This portfolio showcases my learning journey, including:</p>
-      <ul>
-        <li>Hands-on Arduino research and experiments</li>
-        <li>App development projects and code samples</li>
-        <li>Weekly reflections and personal insights</li>
-        <li>Links to my resume, GitHub, and more</li>
-      </ul>
-    
-      <p>The purpose of this site is to document my growth, demonstrate my skills, and share what I’m working on — whether it’s for internships, mentors, or just curious visitors.</p>
-    </section>
+  <section id="introduction">
+    <h1>Welcome to My Portfolio</h1>
+    <p>Hi, I'm <strong>Sean Tai Han Xuan</strong>, a CS student passionate about bridging theory and practice through hands-on tech projects.</p>
+    <p>This site includes:</p>
+    <ul>
+      <li>Arduino research and experiments</li>
+      <li>App development progress</li>
+      <li>Weekly reflections and insights</li>
+      <li>Resume, GitHub, and LinkedIn links</li>
+    </ul>
+    <p>It’s a space to showcase my learning journey and growth to mentors, recruiters, and curious visitors.</p>
+  </section>
 
+  <!-- Your project and reflections sections go here exactly as before -->
+  <!-- Replace the rest of your previous content from <section id="projects"> onward here -->
+  
+</body>
+</html>
     <!-- Projects Section -->
     <section id="projects">
       <h2>Projects</h2>
