--- a/index.html
+++ b/index.html
@@ -1,84 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>My Portfolio - Sean Tai Han Xuan</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #121212;
-      color: #e0e0e0;
-      margin: 0;
-      padding: 20px;
-      line-height: 1.6;
-      scroll-behavior: smooth;
-    }
-    nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0 0 30px 0;
-      display: flex;
-      gap: 20px;
-    }
-    nav ul li {
-      display: inline;
-    }
-    nav a {
-      text-decoration: none;
-      color: #90caf9;
-      padding: 6px 10px;
-      border-radius: 4px;
-      transition: background 0.3s;
-    }
-    nav a:hover {
-      background-color: #1e1e1e;
-    }
-    section {
-      background-color: #1e1e1e;
-      padding: 20px;
-      margin-bottom: 40px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-    h1, h2, h3, h4 {
-      color: #bbdefb;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    table, th, td {
-      border: 1px solid #444;
-    }
-    th, td {
-      padding: 10px;
-      text-align: left;
-    }
-    summary {
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    pre {
-      background-color: #263238;
-      padding: 10px;
-      border-radius: 6px;
-      overflow-x: auto;
-      color: #e0e0e0;
-    }
-    code {
-      font-family: monospace;
-      white-space: pre-wrap;
-    }
-    a {
-      color: #81d4fa;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>My Portfolio - Sean Tai Han Xuan</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 <body>
 
   <nav>
