--- a/index.html
+++ b/index.html
@@ -57,9 +57,22 @@
           <p><strong>Reflections:</strong> Since this is my very first experience to apply my theoretical knowledge into a hands-on project (ignoring all labs in class), I know how a real-life project is very different from high school's lab
           I learned to find potential issues such as the memory usage of a code and the functions of each pin in Arduino, combining all of my knowledge to result in a better version of the code.</p>
         </details>
+        
         <details>
           <summary><strong>Finding The Patterns and The Abnormality</strong></summary>
-          <p></p>
+          <p>As shown above, when we list out the frequency and the baud rate, we can see a certain pattern about the communication between the Arduino and the computer. Also, there will be some abnormality that I need to figure out the reason.
+            I looked deeper into the communication between an Arduino and a computer, and noticed something I can use a code to verify. Therefore I implemented the code below.</p>
+          <pre><code>
+
+          </code></pre>
+          <p>This code significantly show how data loss increases when the baud rate or the frequency increases. This means that th ehigher the frequency or baud rate, the more unstable the communication.
+            This is because the <strong>throughput</strong> of data communication may decrease due to the amount of data transfer over a time. It can be solved by exchanging the cable for communication.
+          </p>
+        </details>
+
+        <details>
+
+
         </details>
       </details>
       
