--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
+  <header>
+  <nav>
+    <a href="#about">about</a>
+    <a href="#project">project</a>
+    <a href="#blog">blog</a>
+    <a href="#contact">contact</a>
+    <a href="#resume">✖️</a>
+    <a href="#linkedin">🔗</a>
+    <a href="#gallery">📷</a>
+  </nav>
+</header>
 
   <nav>
     <ul>
@@ -88,13 +99,14 @@
 
 
 
-    <!-- App Project Subsection -->
+    <!-- App Project Subsection 
     <section id="app">
       <h3>App Development</h3>
       <p>Details about your app development project...</p>
       <h4>Reflection</h4>
       <p>Your reflection about the app development project goes here.</p>
     </section>
+  -->
 
     <!-- General Reflections Section -->
     <section id="reflections">
