--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   </head>
 <body>
   <header>
-  <nav>
-    <a href="#about">about</a>
-    <a href="#project">project</a>
-    <a href="#blog">blog</a>
-    <a href="#contact">contact</a>
-    <a href="#resume">✖️</a>
-    <a href="#linkedin">🔗</a>
-    <a href="#gallery">📷</a>
+  <nav class="nav-bar">
+    <div class="nav-left">
+      <a href="#about">about</a>
+      <a href="#project">project</a>
+      <a href="#blog">blog</a>
+      <a href="#contact">contact</a>
+    </div>
+    <div class="nav-right">
+      <a href="#"><span class="icon">🏠</span></a>     <!-- Home Icon -->
+      <a href="#"><span class="icon">☰</span></a>     <!-- Menu Icon -->
+    </div>
   </nav>
 </header>
 
